newclay/test/Compiler/StaticEvaluator/Fail/ModuleAmbiguousImport/main.clay
import __primitives__.*;
import factorial.*; // has Factorial
import tools.*; // also has Factorial

define Main;
overload #Main() = Factorial(8);
